--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "requires": true,
   "lockfileVersion": 1,
-  "dependencies": {
-    "node": {
-      "version": "14.8.0",
-      "resolved": "https://registry.npmjs.org/node/-/node-14.8.0.tgz",
-      "integrity": "sha512-F3hndEpkL32EaxbNawsUdMjQfPGAWvIlK8lMdQykI4Rp3dw/p9X1e0OFa0Tyvz1+hGefgT6lQWJ8wj1g/YvO9g==",
-      "requires": {
-        "node-bin-setup": "^1.0.0"
-      }
-    },
-    "node-bin-setup": {
-      "version": "1.0.6",
-      "resolved": "https://registry.npmjs.org/node-bin-setup/-/node-bin-setup-1.0.6.tgz",
-      "integrity": "sha512-uPIxXNis1CRbv1DwqAxkgBk5NFV3s7cMN/Gf556jSw6jBvV7ca4F9lRL/8cALcZecRibeqU+5dFYqFFmzv5a0Q=="
-    }
-  }
+  "dependencies": {},
+  "name": "resume",
+  "version": "1.0.0",
+  "main": "Untitled-1.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/withteja/Resume.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/withteja/Resume/issues"
+  },
+  "homepage": "https://github.com/withteja/Resume#readme",
+  "description": ""
 }
